Blocking direnv load from symlink

--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,5 @@
-use flake
+if [[ "$PWD" == "$OLDPWD" ]]; then
+  use flake
+else
+  echo "direnv: blocking load because you entered via a symlink" >&2
+fi
